# ant-colony

./: AntColonyBase.cpp  CMakeLists.txt  Doxyfile  README.md  binding.cpp
antcolony/: __init__.py  setup.py
include/: AntColonyBase.cpp  AntColonyBase.h  main.cpp
test/: CMakeLists.txt  test.cpp
